[tool.poetry]
name = "charts_eval"
version = "0.1.0"
description = ""
authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-xdist = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
greet = "charts_eval.main:cli"