[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.0"
tabulate = "^0.9.0"
matplotlib = "^3.6.2"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
